--- a/task 3/task3.css
+++ b/task 3/task3.css
@@ -41,7 +41,7 @@
      background: linear-gradient(to top, rgb(158, 130, 186), rgb(229, 191, 239)); 
      position: relative;
 }
-
+/*------------------------------------------------------------------------*/
  .background2{
         width: 100%;
         height: 500px;
@@ -100,13 +100,3 @@
         margin-top: 30px;
         background-color: rgb(9, 230, 64);
 }
-/*
-    .form-content span{
-        color: rgb(9, 230, 64);
-        text-align: center;
-    }
-    #spn{
-        display: block;
-        text-align: center;
-    }
-        */
