--- a/task 3/task3.css
+++ b/task 3/task3.css
@@ -81,7 +81,7 @@
 }
 .sign2f input, .sign2f button{
     margin-left: 30px;
-    border-radius: 15%;
+    border-radius: 15px;
 }
 .sign2f input{
     width: 80%;
